--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Juulin Portfolio</title>
+  <title>Portfolio</title>
 </head>
 <body>
   <h1>Tervetuloa portfoliooni!</h1>
-  <p>Tässä on ensimmäinen verkkosivuni.</p>
+  <p>Tässä on ensimmäinen verkkosivuni. jee</p>
 </body>
 </html>
