--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <nav class="navbar">
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
-      <li><a href="tietoja.html">TIETOJA MINUSTA</a></li>
+      <li><a href="tietoja.html">TIETOA MINUSTA</a></li>
       <li><a href="projektit.html">PROJEKTIT</a></li>
       <li><a href="cv.html">CV</a></li>
       <li><a href="yhteys.html">YHTEYS</a></li>
@@ -34,3 +34,4 @@
     </div>
   </div>
 </body>
+</html>
