--- a/projektit.html
+++ b/projektit.html
@@ -5,21 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projektit</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar">
+  <nav class="navbar">
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
-      <li><a href="tietoja.html">TIETOJA MINUSTA</a></li>
+      <li><a href="tietoja.html">TIETOA MINUSTA</a></li>
       <li><a href="projektit.html">PROJEKTIT</a></li>
       <li><a href="cv.html">CV</a></li>
       <li><a href="yhteys.html">YHTEYS</a></li>
     </ul>
   </nav>
-  <h1>Projektit</h1>
-  <p>Tähän voit kirjoittaa tietoa projekteistasi.</p>
-  
-  <a href="index.html">Takaisin etusivulle</a>
+
+  <div class="container">
+      <h1>Projektit</h1>
+      <p>Tähän voit kirjoittaa tietoa projekteistasi.</p>
+      <a href="index.html" class="button1">TAKAISIN ETUSIVULLE</a>
+  </div>
 </body>
 </html>
