--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <nav class="navbar">
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
-      <li><a href="tietoja.html">TIETOA MINUSTA</a></li>
-      <li><a href="projektit.html">PROJEKTIT</a></li>
+      <li><a href="tietoja.html">ESITTELY</a></li>
+      <li><a href="projektit.html">PROJEKTEJA</a></li>
       <li><a href="cv.html">CV</a></li>
       <li><a href="yhteys.html">YHTEYS</a></li>
     </ul>
@@ -22,16 +22,63 @@
   <div class="container">
     <div class="kuvajateksti">
       <div class="aloitusteksti">
-        <h1>Juulia Vähä</h1>
+        <h1>JUULIA VÄHÄ</h1>
         <h2>Tietojenkäsittelyn opiskelija</h2>
-        <p>Hei, olen Juulia Vähä ja opiskelen kolmatta vuotta tietojenkäsittelyä Kaakkois-Suomen ammattikorkeakoulussa.</p>
+        <p>Hei, olen Juulia Vähä ja opiskelen kolmatta vuotta tietojenkäsittelyä Kaakkois-Suomen ammattikorkeakoulussa. Nyt etsin uusia mahdollisuuksia työrintamalla, joten eiköhän aloiteta tutustuminen.</p>
         <div class="linkkilaatikot">
-          <a href="projektit.html" class="button1">PROJEKTIT</a>
+          <a href="tietoja.html" class="button1">ESITTELY</a>
           <a href="cv.html" class="button2">CV</a>
         </div>
       </div>
-      <img src="img/portfolioimg.jpg" alt="Juulian kuva" />
+      <img src="img/portfolioimgtransparent.png" alt="Juulian kuva" />
     </div>
   </div>
+
+  <section class="projektiosio">
+    <h3>Projekteja</h3>
+    <p>Alla on esitelty erilaisia projekteja opintokokonaisuuksittain.</p>
+    <section class="kuvaosio">
+    <div class="kuvakortti">
+      <a href="sovellusohjelmointi.html">
+        <img src="img/SO.png" alt="Kuva 1">
+        <p>Sovellusohjelmointi</p>
+      </a>
+    </div>
+    <div class="kuvakortti">
+      <a href="pelit.html">
+        <img src="img/PP.png" alt="Kuva 2">
+        <p>Pelit ja pelillisyys</p>
+      </a>
+    </div>
+    <div class="kuvakortti">
+      <a href="shj.html">
+        <img src="img/SHJ.png" alt="Kuva 3">
+        <p>Sisällönhallintajärjestelmät</p>
+      </a>
+    </div>
+    <div class="kuvakortti">
+      <a href="graafinen.html">
+        <img src="img/GS.png" alt="Kuva 4">
+        <p>Graafinen suunnittelu</p>
+      </a>
+    </div>
+    <div class="kuvakortti">
+      <a href="portfoliosivu.html">
+        <img src="img/esimerkkikuva1.png" alt="Kuva 5">
+        <p>Portfoliosivu</p>
+      </a>
+    </div>
+    <div class="kuvakortti">
+      <a href="video.html">
+        <img src="img/esimerkkikuva2.png" alt="Kuva 5">
+        <p>Video ja ääni</p>
+      </a>
+    </div>
+  </section>
+</section>
+
+
+    </div>
+
 </body>
 </html>
