--- a/cv.html
+++ b/cv.html
@@ -11,7 +11,7 @@
   <nav class="navbar">
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
-      <li><a href="tietoja.html">TIETOA MINUSTA</a></li>
+      <li><a href="tietoja.html">ESITTELY</a></li>
       <li><a href="projektit.html">PROJEKTIT</a></li>
       <li><a href="cv.html">CV</a></li>
       <li><a href="yhteys.html">YHTEYS</a></li>
