--- a/graafinen.html
+++ b/graafinen.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Yhteys</title>
+  <title>Esittely</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap" rel="stylesheet">
 </head>
@@ -19,12 +19,8 @@
   </nav>
 
   <div class="container">
-      <h1>Yhteystiedot</h1>
-      
-      <p>Juulia Vähä</p>
-      <p>0505685925</p>
-      <p>vaha.juulia@gmail.com</p>
-      
+      <h1>Graafinen suunnittelu</h1>
+      <p>Esittely</p>
       <a href="index.html" class="button1">TAKAISIN ETUSIVULLE</a>
   </div>
 </body>
