--- a/projektit.html
+++ b/projektit.html
@@ -11,7 +11,7 @@
   <nav class="navbar">
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
-      <li><a href="tietoja.html">TIETOA MINUSTA</a></li>
+      <li><a href="tietoja.html">ESITTELY</a></li>
       <li><a href="projektit.html">PROJEKTIT</a></li>
       <li><a href="cv.html">CV</a></li>
       <li><a href="yhteys.html">YHTEYS</a></li>
@@ -19,8 +19,8 @@
   </nav>
 
   <div class="container">
-      <h1>Projektit</h1>
-      <p>Tähän voit kirjoittaa tietoa projekteistasi.</p>
+      <h1>Projekteja</h1>
+      <p>Täällä esittelen muutamia projekteja koulutieni varrelta, eri opintokokonaisuuksista.</p>
       <a href="index.html" class="button1">TAKAISIN ETUSIVULLE</a>
   </div>
 </body>
