--- a/tietoja.html
+++ b/tietoja.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tietoja minusta</title>
+  <title>Esittely</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
   <nav class="navbar">
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
-      <li><a href="tietoja.html">TIETOA MINUSTA</a></li>
+      <li><a href="tietoja.html">ESITTELY</a></li>
       <li><a href="projektit.html">PROJEKTIT</a></li>
       <li><a href="cv.html">CV</a></li>
       <li><a href="yhteys.html">YHTEYS</a></li>
@@ -19,8 +19,8 @@
   </nav>
 
   <div class="container">
-      <h1>Tietoa minusta</h1>
-      <p>Tähän voit kirjoittaa tietoa projekteistasi.</p>
+      <h1>Esittely</h1>
+      <p>Esittely</p>
       <a href="index.html" class="button1">TAKAISIN ETUSIVULLE</a>
   </div>
 </body>
