--- a/pelit.html
+++ b/pelit.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Esittely</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
   <nav class="navbar">
@@ -18,10 +18,30 @@
     </ul>
   </nav>
 
-  <div class="container">
-      <h1>Pelit ja pelillisyys</h1>
-      <p>Esittely</p>
-      <a href="index.html" class="button1">TAKAISIN ETUSIVULLE</a>
+<div class="container">
+  <h1>Pelit ja pelillisyys</h1>
+  
+  <p><strong>Oma interaktiivinen pelimaailma Unreal Enginessä</strong></p>
+  
+  <p>Kurssin lopputyössä suunnittelin ja toteutin kokonaisen pelimaailman Unreal Engine -ympäristöön. Tavoitteena oli yhdistää aiemmissa harjoituksissa opitut taidot ja luoda visuaalisesti toimiva, interaktiivinen ympäristö, jossa pelaaja voi liikkua ja nauttia maisemasta.</p>
+  <img src="img/PP.png" alt="Pelinäkymä1">
+  <p><strong>Tehtävän keskeiset osa-alueet:</strong></p>
+  <ul>
+    <li><strong>Oma maasto:</strong> Rakensin maaston täysin itse muokaten Terresculpt-työkalulla ja välttäen kurssin valmiita korkeuskarttoja.</li>
+    <li><strong>Monipuolinen foliage:</strong> Käytin useita eri kasvi- ja luonnonelementtejä, kuten puita, ruohikkoa ja kiviröykkiöitä, maiseman rikastamiseksi ja elävöittämiseksi.</li>
+    <li><strong>Materiaalit ja teksturointi:</strong> Hyödynsin useampaa erilaista materiaalia, jotka sulautuvat toisiinsa luoden yhtenäisen ja realistisen ilmeen.</li>
+    <li><strong>Selkeä kulkuväylä:</strong> Suunnittelin reitin, jota pitkin pelaaja voi liikkua ja ihailla maisemia. Reitti erottuu ympäristöstä selkeästi, mutta sulautuu luontevasti maisemaan.</li>
+    <li><strong>Vesielementti:</strong> Pelimaailmassa on järvi, joka lisää tunnelmaa ja luonnollisuutta.</li>
+    <li><strong>Rakennus ja sisustus:</strong> Lisäsin pelimaailmaan rakennuksen, jonka sisustin ja materialisoin huolella. Käytin kurssilla annettua messutaloa.</li>
+    <li><strong>Valaistus ja äänimaailma:</strong> Valaistus suunniteltiin sopivaksi ympäristöön, ja lisäsin taustamusiikin parantamaan tunnelmaa.</li>
+  </ul><br>
+  
+  <p><strong>Tekniset haasteet ja opit:</strong><br><br>
+  Loin pelimaailmaan runsaasti puita ja muuta kasvillisuutta, mikä toi visuaalista runsautta ja luonnollisuutta. Huomasin kuitenkin, että liiallinen foliage kuormittaa grafiikkaa ja heikentää pelin suorituskykyä, joten jouduin tekemään kompromisseja optimaalisen suorituskyvyn ja visuaalisen laadun välillä. Tämä opetti minulle resurssien hallinnan merkityksen ja tasapainon löytämisen grafiikan ja toimivuuden välillä.</p>
+  <img src="img/PP2.png" alt="Pelinäkymä2">
+  <p><strong>Opettajan palaute</strong></p>
+  <img src="img/PPPalaute.png" alt="Palaute">
   </div>
+  <a href="index.html" class="button1">TAKAISIN ETUSIVULLE</a>
 </body>
 </html>
