--- a/sovellusohjelmointi.html
+++ b/sovellusohjelmointi.html
@@ -19,7 +19,8 @@
   </nav>
 
   <div class="container">
-      <h1>Sovellusohjelmointi</h1><br>
+      <h1>Sovellusohjelmointi</h1>
+      <p><strong>Henkilökohtainen kaloriseurantasovellus</strong></p>
 <p>
   <strong>Foodie Planner</strong> on sovellusohjelmoinnin kurssilla toteutettu soveltava harjoitustyö, jonka tavoitteena oli osoittaa osaamista kurssin keskeisistä aiheista. Projektissa arvioitiin aiheen valintaa, teknistä toteutusta ja sovelluksen julkaisemista.
 </p>
@@ -27,7 +28,7 @@
 <p>
   Sovelluksen tarkoituksena on auttaa käyttäjää seuraamaan päivittäistä energiankulutusta ja vertaamaan sitä syötyihin aterioihin. Käyttäjä voi laskea kokonaiskulutuksen ja koota ruokapäiväkirjaa valmiista aterioista.
 </p>
-
+<img src="img/SO.png" alt="Sovelluksen näkymä">
 <p><strong>Keskeiset ominaisuudet:</strong></p>
 <ul>
   <li>Kulutuslaskuri (ikä, pituus, paino, sukupuoli, aktiivisuustaso - BMR + aktiivisuuskerroin)</li>
@@ -36,19 +37,18 @@
   <li>Tietojen säilytys selaimessa (localStorage)</li>
   <li>Moderni käyttöliittymä Material UI -komponenteilla (valikot, tekstikentät, napit, Drawer-valikko)</li>
   <li>Reseptisivu, josta löytyy ainesosat ja reseptit</li>
-</ul>
+</ul><br>
 
-<p><strong>Käytetyt teknologiat:</strong><br>
+<p><strong>Käytetyt teknologiat:</strong><br><br>
 React (TypeScript), Material UI, localStorage
 </p>
 
 <p>
 Sovellus on julkaistu GitHub Pages -palvelussa. Pääset kokeilemaan sitä <a href="https://fjusa016xamk.github.io/foodieplanner/" target="_blank">tästä linkistä</a>.
-</p><img src="img/SO.png" alt="Kuva 1">
-
-
-      
-         <a href="index.html" class="button1">TAKAISIN ETUSIVULLE</a>
+</p>
+<p><strong>Opettajan palaute</strong></p>
+<img src="img/SOPalaute.png" alt="Palaute">
   </div>
+  <a href="index.html" class="button1">TAKAISIN ETUSIVULLE</a>
 </body>
 </html>
