--- a/shj.html
+++ b/shj.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Esittely</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;800&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="muut">
   <nav class="navbar">
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
       <li><a href="tietoja.html">ESITTELY</a></li>
-      <li><a href="projektit.html">PROJEKTIT</a></li>
+      <li><a href="projektit.html">PROJEKTEJA</a></li>
       <li><a href="cv.html">CV</a></li>
       <li><a href="yhteys.html">YHTEYS</a></li>
     </ul>
@@ -20,7 +20,10 @@
 
   <div class="container">
       <h1>Sisällönhallintajärjestelmät</h1>
-      <p>Esittely</p>
+      <p><strong>WordPress-verkkosivuprojekti</strong></p>
+      <p>Kurssin lopputehtävänä toteutin verkkosivuston alusta alkaen WordPress-julkaisujärjestelmää hyödyntäen. Projektin tavoitteena oli soveltaa kurssin aikana opittuja taitoja käytännössä, mukaan lukien teemojen, lisäosien, sivujen, artikkeleiden ja lohkojen käyttö.
+
+Sivuston aiheena oli käsintehtyjen kynttilöiden verkkokauppa, ja määrittelin selkeästi sen tarkoituksen sekä kohdeyleisön. Suunnittelin myös sivuston rakenteen ja toteutin kaikki oleelliset sivut, kuten etusivun, yhteystiedot ja aiheeseen liittyvät sisältösivut.</p>
       <a href="index.html" class="button1">TAKAISIN ETUSIVULLE</a>
   </div>
 </body>
