--- a/cv.html
+++ b/cv.html
@@ -12,8 +12,8 @@
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
       <li><a href="tietoja.html">ESITTELY</a></li>
-      <li><a href="projektit.html">PROJEKTIT</a></li>
-      <li><a href="cv.html">CV</a></li>
+      <li><a href="projektit.html">PROJEKTEJA</a></li>
+      <li><a href="cv.html" class="active">CV</a></li>
       <li><a href="yhteys.html">YHTEYS</a></li>
     </ul>
   </nav>
