--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="fi">
 <head>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Portfolio</title>
 </head>
 
-<body>
+<body class="etusivu">
   <nav class="navbar">
     <ul class="nav-links">
-      <li><a href="index.html">ETUSIVU</a></li>
+      <li><a href="index.html" class="active">ETUSIVU</a></li>
       <li><a href="tietoja.html">ESITTELY</a></li>
       <li><a href="projektit.html">PROJEKTEJA</a></li>
       <li><a href="cv.html">CV</a></li>
@@ -30,7 +30,7 @@
           <a href="cv.html" class="button2">CV</a>
         </div>
       </div>
-      <img src="img/portfolioimgtransparent.png" alt="Juulian kuva" />
+      <img src="img/portfoliotransparent.png" alt="Juulian kuva" />
     </div>
   </div>
 
