--- a/tietoja.html
+++ b/tietoja.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="muut">
   <nav class="navbar">
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
-      <li><a href="tietoja.html">ESITTELY</a></li>
-      <li><a href="projektit.html">PROJEKTIT</a></li>
+      <li><a href="tietoja.html" class="active">ESITTELY</a></li>
+      <li><a href="projektit.html">PROJEKTEJA</a></li>
       <li><a href="cv.html">CV</a></li>
       <li><a href="yhteys.html">YHTEYS</a></li>
     </ul>
