--- a/cv.html
+++ b/cv.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="cv-sivu">
   <nav class="navbar">
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
@@ -21,7 +21,7 @@
   <div class="container">
       <h1>CV</h1>
       <img src="img/CV2025.jpg" alt="CV" class="cv-kuva" />
-      <a href="index.html" class="button1">TAKAISIN ETUSIVULLE</a>
+      <a href="index.html" class="button3">Takaisin etusivulle</a>
   </div>
 </body>
 </html>
