--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a href="cv.html" class="button2">CV</a>
         </div>
       </div>
-      <img src="img/portfoliotransparent.png" alt="Juulian kuva" />
+      <img src="img/portfoliotransparent.png" alt="omakuva" />
     </div>
   </div>
 
