--- a/projektit.html
+++ b/projektit.html
@@ -20,8 +20,47 @@
 
   <div class="container">
       <h1>Projekteja</h1>
-      <p>Täällä esittelen muutamia projekteja koulutieni varrelta, eri opintokokonaisuuksista.</p>
-      <a href="index.html" class="button1">TAKAISIN ETUSIVULLE</a>
-  </div>
+      <p>Alla on esitelty erilaisia projekteja opintokokonaisuuksittain.</p>
+      
+    <section class="kuvaosio">
+    <div class="kuvakortti">
+      <a href="sovellusohjelmointi.html">
+        <img src="img/SO.png" alt="Kuva 1">
+        <p>Sovellusohjelmointi</p>
+      </a>
+    </div>
+    <div class="kuvakortti">
+      <a href="pelit.html">
+        <img src="img/PP.png" alt="Kuva 2">
+        <p>Pelit ja pelillisyys</p>
+      </a>
+    </div>
+    <div class="kuvakortti">
+      <a href="shj.html">
+        <img src="img/SHJ.png" alt="Kuva 3">
+        <p>Sisällönhallintajärjestelmät</p>
+      </a>
+    </div>
+    <div class="kuvakortti">
+      <a href="graafinen.html">
+        <img src="img/GS.png" alt="Kuva 4">
+        <p>Graafinen suunnittelu</p>
+      </a>
+    </div>
+    <div class="kuvakortti">
+      <a href="portfoliosivu.html">
+        <img src="img/esimerkkikuva1.png" alt="Kuva 5">
+        <p>Portfoliosivu</p>
+      </a>
+    </div>
+    <div class="kuvakortti">
+      <a href="video.html">
+        <img src="img/esimerkkikuva2.png" alt="Kuva 5">
+        <p>Video ja ääni</p>
+      </a>
+    </div>
+  </section>
+</section>
+<a href="index.html" class="button3">Takaisin etusivulle</a>
 </body>
 </html>
