--- a/yhteys.html
+++ b/yhteys.html
@@ -25,7 +25,7 @@
       <p>0505685925</p>
       <p>vaha.juulia@gmail.com</p>
       
-      <a href="index.html" class="button1">TAKAISIN ETUSIVULLE</a>
+      <a href="index.html" class="button3">Takaisin etusivulle</a>
   </div>
 </body>
 </html>
