--- a/pelit.html
+++ b/pelit.html
@@ -12,7 +12,7 @@
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
       <li><a href="tietoja.html">ESITTELY</a></li>
-      <li><a href="projektit.html">PROJEKTEJA</a></li>
+      <li><a href="projektit.html" class="active">PROJEKTEJA</a></li>
       <li><a href="cv.html">CV</a></li>
       <li><a href="yhteys.html">YHTEYS</a></li>
     </ul>
@@ -42,6 +42,6 @@
   <p><strong>Opettajan palaute</strong></p>
   <img src="img/PPPalaute.png" alt="Palaute">
   </div>
-  <a href="index.html" class="button1">TAKAISIN ETUSIVULLE</a>
+  <a href="index.html" class="button3">Takaisin etusivulle</a>
 </body>
 </html>
