--- a/shj.html
+++ b/shj.html
@@ -12,7 +12,7 @@
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
       <li><a href="tietoja.html">ESITTELY</a></li>
-      <li><a href="projektit.html">PROJEKTEJA</a></li>
+      <li><a href="projektit.html" class="active">PROJEKTEJA</a></li>
       <li><a href="cv.html">CV</a></li>
       <li><a href="yhteys.html">YHTEYS</a></li>
     </ul>
@@ -24,7 +24,8 @@
       <p>Kurssin lopputehtävänä toteutin verkkosivuston alusta alkaen WordPress-julkaisujärjestelmää hyödyntäen. Projektin tavoitteena oli soveltaa kurssin aikana opittuja taitoja käytännössä, mukaan lukien teemojen, lisäosien, sivujen, artikkeleiden ja lohkojen käyttö.
 
 Sivuston aiheena oli käsintehtyjen kynttilöiden verkkokauppa, ja määrittelin selkeästi sen tarkoituksen sekä kohdeyleisön. Suunnittelin myös sivuston rakenteen ja toteutin kaikki oleelliset sivut, kuten etusivun, yhteystiedot ja aiheeseen liittyvät sisältösivut.</p>
-      <a href="index.html" class="button1">TAKAISIN ETUSIVULLE</a>
   </div>
+
+<a href="index.html" class="button3">Takaisin etusivulle</a>
 </body>
 </html>
