--- a/sovellusohjelmointi.html
+++ b/sovellusohjelmointi.html
@@ -12,7 +12,7 @@
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
       <li><a href="tietoja.html">ESITTELY</a></li>
-      <li><a href="projektit.html">PROJEKTEJA</a></li>
+      <li><a href="projektit.html" class="active">PROJEKTEJA</a></li>
       <li><a href="cv.html">CV</a></li>
       <li><a href="yhteys.html">YHTEYS</a></li>
     </ul>
@@ -49,6 +49,6 @@ Sovellus on julkaistu GitHub Pages -palvelussa. Pääset kokeilemaan sitä <a hr
 <p><strong>Opettajan palaute</strong></p>
 <img src="img/SOPalaute.png" alt="Palaute">
   </div>
-  <a href="index.html" class="button1">TAKAISIN ETUSIVULLE</a>
+  <a href="index.html" class="button3">Takaisin etusivulle</a>
 </body>
 </html>
