--- a/tietoja.html
+++ b/tietoja.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap" rel="stylesheet">
 </head>
-<body class="muut">
+<body class="esittely">
   <nav class="navbar">
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
@@ -16,12 +16,35 @@
       <li><a href="cv.html">CV</a></li>
       <li><a href="yhteys.html">YHTEYS</a></li>
     </ul>
-  </nav>
+</nav>
+  <h1>Esittely</h1><br>
+  <div class="esittely-container">
 
-  <div class="container">
-      <h1>Esittely</h1>
-      <p>Esittely</p>
-      <a href="index.html" class="button1">TAKAISIN ETUSIVULLE</a>
-  </div>
+      <div class="content">
+
+<p><strong>Hei!</strong> Olen Juulia Vähä ja opiskelen viimeistä vuotta tietojenkäsittelyä Kaakkois-Suomen ammattikorkeakoulussa. 
+Etsin uusia työmahdollisuuksia Pirkanmaan alueelta ja olen avoin monenlaisille tehtäville. Suurimmat intohimoni liittyvät visuaaliseen työhön ja ongelmanratkaisutehtäviin. 
+Ohjelmointi sekä web- ja UI-suunnittelu kiinnostavat erityisesti, ja lisäksi minua kiehtovat myös peliala ja graafinen suunnittelu. Olen kiinnostunut uudenlaisista teknologioista ja haluan kehittää osaamistani huipputasolle.</p>
+
+<p><strong>Mitä minulta voi odottaa?</strong><br><br>
+Rakastan ihmisiä ja vaalin hyviä ihmissuhteita niin yksityis- kuin työelämässä. 
+Hyvä työilmapiiri ja yhteistyö työkavereiden sekä asiakkaiden kanssa antavat minulle paljon. 
+Työskentelen tarkasti, tunnollisesti ja kunnianhimoisesti.</p>
+
+<p>Nautin monipuolisista projekteista, jotka tarjoavat mahdollisuuden kehittyä. 
+En viihdy paikallani, elämässäni täytyy aina olla yksi tai useampi projekti työn alla. 
+Haluaisin suunnata tämän energian työtehtäviin, jotka todella inspiroivat minua.</p>
+
+<p>Kun en istu tietokoneen ääressä, olen todennäköisesti virkkaamassa tai juoksulenkillä. 
+Oman käden jäljen näkeminen, pikkutarkka työ, mutta toisaalta myös itsensä haastaminen ja kehittäminen antavat minulle energiaa arjessa.</p>
+
+<p>Jos uskot, että sopisin teidän tiimiin niin persoonana kuin työntekijänä, ota yhteyttä, niin keskustellaan lisää.</p>
+<a href="yhteys.html" class="button1">Yhteystiedot</a>
+</div>
+
+<img src="img/portfolioimage.jpg" alt="omakuva" class="esittelykuva" />
+
+  </div>  
+<a href="index.html" class="button3">Takaisin etusivulle</a>
 </body>
 </html>
