--- a/video.html
+++ b/video.html
@@ -12,7 +12,7 @@
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
       <li><a href="tietoja.html">ESITTELY</a></li>
-      <li><a href="projektit.html">PROJEKTEJA</a></li>
+      <li><a href="projektit.html" class="active">PROJEKTEJA</a></li>
       <li><a href="cv.html">CV</a></li>
       <li><a href="yhteys.html">YHTEYS</a></li>
     </ul>
@@ -21,7 +21,7 @@
   <div class="container">
       <h1>Video ja ääni</h1>
       <p>Esittely</p>
-      <a href="index.html" class="button1">TAKAISIN ETUSIVULLE</a>
+      <a href="index.html" class="button3">Takaisin etusivulle</a>
   </div>
 </body>
 </html>
