--- a/cv.html
+++ b/cv.html
@@ -23,5 +23,10 @@
       <img src="img/CV2025.jpg" alt="CV" class="cv-kuva" />
       <a href="index.html" class="button3">Takaisin etusivulle</a>
   </div>
+
+<footer class="footer">
+<p>© 2025 Juulia Vähä</p>
+</footer>
+
 </body>
 </html>
