--- a/pelit.html
+++ b/pelit.html
@@ -43,5 +43,10 @@
   <img src="img/PPPalaute.png" alt="Palaute">
   </div>
   <a href="index.html" class="button3">Takaisin etusivulle</a>
+
+<footer class="footer">
+<p>© 2025 Juulia Vähä</p>
+</footer>
+
 </body>
 </html>
