--- a/tietoja.html
+++ b/tietoja.html
@@ -21,30 +21,60 @@
   <div class="esittely-container">
 
       <div class="content">
-
 <p><strong>Hei!</strong> Olen Juulia Vähä ja opiskelen viimeistä vuotta tietojenkäsittelyä Kaakkois-Suomen ammattikorkeakoulussa. 
 Etsin uusia työmahdollisuuksia Pirkanmaan alueelta ja olen avoin monenlaisille tehtäville. Suurimmat intohimoni liittyvät visuaaliseen työhön ja ongelmanratkaisutehtäviin. 
 Ohjelmointi sekä web- ja UI-suunnittelu kiinnostavat erityisesti, ja lisäksi minua kiehtovat myös peliala ja graafinen suunnittelu. Olen kiinnostunut uudenlaisista teknologioista ja haluan kehittää osaamistani huipputasolle.</p>
 
-<p><strong>Mitä minulta voi odottaa?</strong><br><br>
+<p><strong>Mitä voit odottaa minulta?</strong><br><br>
 Rakastan ihmisiä ja vaalin hyviä ihmissuhteita niin yksityis- kuin työelämässä. 
 Hyvä työilmapiiri ja yhteistyö työkavereiden sekä asiakkaiden kanssa antavat minulle paljon. 
 Työskentelen tarkasti, tunnollisesti ja kunnianhimoisesti.</p>
 
 <p>Nautin monipuolisista projekteista, jotka tarjoavat mahdollisuuden kehittyä. 
-En viihdy paikallani, elämässäni täytyy aina olla yksi tai useampi projekti työn alla. 
-Haluaisin suunnata tämän energian työtehtäviin, jotka todella inspiroivat minua.</p>
+Elämässäni täytyy aina olla yksi tai useampi projekti työn alla. 
+Haluaisin suunnata tämän energian työtehtäviin, jotka inspiroivat minua.
+Kun eteeni tulee jokin mielenkiintoinen projekti, minun on vaikea lopettaa työstämästä sitä.</p>
 
 <p>Kun en istu tietokoneen ääressä, olen todennäköisesti virkkaamassa tai juoksulenkillä. 
 Oman käden jäljen näkeminen, pikkutarkka työ, mutta toisaalta myös itsensä haastaminen ja kehittäminen antavat minulle energiaa arjessa.</p>
 
 <p>Jos uskot, että sopisin teidän tiimiin niin persoonana kuin työntekijänä, ota yhteyttä, niin keskustellaan lisää.</p>
 <a href="yhteys.html" class="button1">Yhteystiedot</a>
+       </div>
+
+<div class="kuva-ja-tyokalut">
+  <img src="img/portfolioimage.jpg" alt="omakuva" class="esittelykuva" />
+  <p><strong>Työkalut ja tekniikat</strong></p>
+
+  <div class="tool-list">
+    <div>
+      <p>HTML, CSS</p>
+      <p>TypeScript, Python</p>
+      <p>Visual Studio Code</p>
+      <p>React, Node.js</p>
+      <p>Github</p>
+      <p>Wordpress</p>
+      <p>SQL</p>
+      <p>Unreal Engine</p>
+    </div>
+    <div>
+      <p>Adobe Photoshop</p>
+      <p>Adobe Illustrator</p>
+      <p>Adobe InDesign</p>
+      <p>Adobe Premiere</p>
+      <p>Adobe Audition</p>
+      <p>Adobe After Effects</p>
+      <p>Microsoft Office</p>
+    </div>
+  </div>
+</div>
 </div>
 
-<img src="img/portfolioimage.jpg" alt="omakuva" class="esittelykuva" />
-
-  </div>  
 <a href="index.html" class="button3">Takaisin etusivulle</a>
+
+<footer class="footer">
+<p>© 2025 Juulia Vähä</p>
+</footer>
+
 </body>
 </html>
