--- a/yhteys.html
+++ b/yhteys.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap" rel="stylesheet">
 </head>
-<body class="muut">
+<body class="yhteys">
   <nav class="navbar">
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
@@ -21,11 +21,20 @@
   <div class="container">
       <h1>Yhteystiedot</h1>
       
-      <p>Juulia Vähä</p>
-      <p>0505685925</p>
-      <p>vaha.juulia@gmail.com</p>
+      <p>Ota minuun rohkeasti yhteyttä puhelimitse tai sähköpostitse.</p>
+
+    <div class="yhteystiedot">
+      <h4><strong>Juulia Vähä</strong></h4>
+      <h4>Puhelin: 050 568 5925</h4>
+      <h4>Sähköposti: vaha.juulia@gmail.com</h4>
+    </div>
       
       <a href="index.html" class="button3">Takaisin etusivulle</a>
   </div>
+
+<footer class="footer">
+<p>© 2025 Juulia Vähä</p>
+</footer>
+
 </body>
 </html>
