--- a/portfoliosivu.html
+++ b/portfoliosivu.html
@@ -23,5 +23,10 @@
       <p>Esittely</p>
       <a href="index.html" class="button3">Takaisin etusivulle</a>
   </div>
+
+<footer class="footer">
+<p>© 2025 Juulia Vähä</p>
+</footer>
+
 </body>
 </html>
