--- a/shj.html
+++ b/shj.html
@@ -21,11 +21,24 @@
   <div class="container">
       <h1>Sisällönhallintajärjestelmät</h1>
       <p><strong>WordPress-verkkosivuprojekti</strong></p>
-      <p>Kurssin lopputehtävänä toteutin verkkosivuston alusta alkaen WordPress-julkaisujärjestelmää hyödyntäen. Projektin tavoitteena oli soveltaa kurssin aikana opittuja taitoja käytännössä, mukaan lukien teemojen, lisäosien, sivujen, artikkeleiden ja lohkojen käyttö.
+      <p>Tässä projektissa loin suomalaisen käsintehtyjen kynttilöiden verkkokaupan nimeltä <strong>HEHKU</strong>. Tavoitteena oli rakentaa käyttäjäystävällinen ja visuaalisesti houkutteleva verkkosivusto, joka palvelee sisustuksesta ja kodin tunnelman luomisesta kiinnostuneita asiakkaita.
 
-Sivuston aiheena oli käsintehtyjen kynttilöiden verkkokauppa, ja määrittelin selkeästi sen tarkoituksen sekä kohdeyleisön. Suunnittelin myös sivuston rakenteen ja toteutin kaikki oleelliset sivut, kuten etusivun, yhteystiedot ja aiheeseen liittyvät sisältösivut.</p>
+Projektissa käytin WordPress-alustaa ja WooCommerce-lisäosaa verkkokaupan toiminnallisuuksien, kuten ostoskorin, maksutapojen ja varastonhallinnan, toteuttamiseen. </p>
+
+<img src="img/SHJ.png" alt="Verkkokauppa">
+<p>Verkkokaupassa on perinteiset sivut, kuten etusivu, "Meistä", "Ota yhteyttä" sekä blogisivu, jossa kerrotaan kynttilöiden valmistusprosessista ja uusista tuotteista.
+
+Ulkoasun pohjaksi valitsin Storefront-teeman, jota muokkasin muun muassa lisäämällä oman logon, muuttamalla värimaailmaa ja kääntämällä sivuston suomenkieliseksi Loco Translate -lisäosan avulla.
+
+Lisäsin sivustolle myös toiminnallisuuksia kuten live-chatin asiakkaiden yhteydenottoa varten ja ajastimen (Countdown Timer), jolla voidaan esitellä kampanjoita. Lomakkeet toteutin WPForms-lisäosalla.</p>
+<p><strong>Opettajan palaute</strong></p>
+<img src="img/SHJPalaute.png" alt="Palaute">
   </div>
-
 <a href="index.html" class="button3">Takaisin etusivulle</a>
+
+<footer class="footer">
+<p>© 2025 Juulia Vähä</p>
+</footer>
+
 </body>
 </html>
