--- a/sovellusohjelmointi.html
+++ b/sovellusohjelmointi.html
@@ -50,5 +50,10 @@ Sovellus on julkaistu GitHub Pages -palvelussa. Pääset kokeilemaan sitä <a hr
 <img src="img/SOPalaute.png" alt="Palaute">
   </div>
   <a href="index.html" class="button3">Takaisin etusivulle</a>
+
+<footer class="footer">
+<p>© 2025 Juulia Vähä</p>
+</footer>
+
 </body>
 </html>
