--- a/graafinen.html
+++ b/graafinen.html
@@ -19,9 +19,27 @@
   </nav>
 
   <div class="container">
-      <h1>Graafinen suunnittelu</h1>
-      <p>Esittely</p>
-      <a href="index.html" class="button3">Takaisin etusivulle</a>
+    <h1>Graafinen suunnittelu</h1>
+    <p><strong>Pelimaailman ja -hahmojen suunnittelu ja toteutus</strong></p>
+
+    <p>Tehtävänä oli suunnitella pelin ulkoasu alakouluikäisille lapsille, jossa seikkailevat kaksi hahmoa: pieni ja viisas Kirppu sekä voimakas Härkä. Pelin tavoitteena on kehittää Kirpun viisautta ja Härän voimaa pelaajan vastatessa oikeisiin matemaattisiin kysymyksiin. Jokaisesta oikeasta vastauksesta Kirppu saa lisää painoa ”bodattavakseen”, ja painon karttuessa pelaaja etenee pelissä tasolta toiselle. Itse peli-idea annettiin valmiina.</p>
+
+    <p>Hahmojen suunnittelussa halusin korostaa heidän luonteenpiirteitään: Kirppu on pieni, älykäs ja pirteä, varustettuna silmälaseilla ja kirja/vihkolla, kun taas Härkä on lihaksikas, hieman hölmistynyt ja ystävällinen. Värit ja pelin elementit suunniteltiin pirteiksi ja helposti lapsille hahmotettaviksi.</p><br>
+
+    <img src="img/GS.png" alt="Pelinäkymä"> 
+
+    <p>Työskentelin Illustratorilla, joka oli minulle uutta, ja opin käyttämään ohjelman työkaluja haasteiden kautta. Pyrin luomaan hahmoista selkeitä ja värikkäitä, mutta kuitenkin yksinkertaisia ja sarjakuvamaisia. Työn aikana kehitin taitojani tietokoneella piirtämisessä, sillä piirtopöydän sijaan käytössä oli ainoastaan hiiri.</p>
+
+    <p>Kaiken kaikkiaan projekti oli innostava ja opettavainen kokemus, joka vahvisti kiinnostustani pelien tekemiseen ja digitaaliseen piirtämiseen.</p>
+
+    <p><strong>Jos haluat tarkastella kattavampaa raporttia suunnittelusta ja toteutuksesta kokonaisuudessaan, voit ladata sen alta.</strong></p>
+    <a href="loppuraportti.pdf" download class="button1">Lataa loppuraportti (PDF)</a>
+
+    <br><br><br><br>
+    <p><strong>Opettajan palaute</strong></p>
+    <img src="img/GSPalaute.png" alt="Palaute">
+
+    <a href="index.html" class="button3">Takaisin etusivulle</a>
   </div>
 
 <footer class="footer">
