--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
     <div class="kuvakortti">
       <a href="portfoliosivu.html">
-        <img src="img/esimerkkikuva1.png" alt="Kuva 5">
+        <img src="img/portfoliosivukuva.png" alt="Kuva 5">
         <p>Portfoliosivu</p>
       </a>
     </div>
