--- a/portfoliosivu.html
+++ b/portfoliosivu.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Esittely</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;800&display=swap" rel="stylesheet">
 </head>
 <body class="muut">
   <nav class="navbar">
@@ -20,9 +20,21 @@
 
   <div class="container">
       <h1>Portfoliosivu</h1>
-      <p>Esittely</p>
-      <a href="index.html" class="button3">Takaisin etusivulle</a>
+      <p><strong>Oma portfolioprojekti</strong></p>
+<p>
+Halusin luoda oman portfoliosivun, joka toimii itsessään näyttönä verkkosivujen rakentamisen hallitsemisena ja missä pääsen näyttämään osaamistani.
+</p>
+
+<p>
+  Suunnittelin verkkosivuston itse alusta alkaen, eikä siinä ole käytetty mitään valmiita pohjia. Koodi on kirjoitettu from scratch.
+  Ensisijaisesti suunnittelin verkkosivuston toimivan suurilla ruuduilla, mutta halusin tehdä sivustosta toki myös responsiivisen, jotta sivustoa voisi käyttää mahdollisimman monipuolisesti, eikä puhelin käyttäjälläkään jää sivustosta huono maku suuhun.
+</p>
+
+<p>Mikäli haluat tarkastella tarkemmin sivuston rakennetta, pääset GitHub-repositorioon <a href="https://github.com/juuliavaha/portfolio.git" target="_blank">tästä.</a></p>
+
+
   </div>
+  <a href="index.html" class="button3">Takaisin etusivulle</a>
 
 <footer class="footer">
 <p>© 2025 Juulia Vähä</p>
