--- a/video.html
+++ b/video.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Esittely</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;800&display=swap" rel="stylesheet">
 </head>
 <body class="muut">
   <nav class="navbar">
@@ -19,10 +19,37 @@
   </nav>
 
   <div class="container">
-      <h1>Video ja ääni</h1>
-      <p>Esittely</p>
-      <a href="index.html" class="button3">Takaisin etusivulle</a>
+      <h1>Sovellusohjelmointi</h1>
+      <p><strong>Henkilökohtainen kaloriseurantasovellus</strong></p>
+<p>
+  <strong>Foodie Planner</strong> on sovellusohjelmoinnin kurssilla toteutettu soveltava harjoitustyö, jonka tavoitteena oli osoittaa osaamista kurssin keskeisistä aiheista. Projektissa arvioitiin aiheen valintaa, teknistä toteutusta ja sovelluksen julkaisemista.
+</p>
+
+<p>
+  Sovelluksen tarkoituksena on auttaa käyttäjää seuraamaan päivittäistä energiankulutusta ja vertaamaan sitä syötyihin aterioihin. Käyttäjä voi laskea kokonaiskulutuksen ja koota ruokapäiväkirjaa valmiista aterioista.
+</p>
+<img src="img/SO.png" alt="Sovelluksen näkymä">
+<p><strong>Keskeiset ominaisuudet:</strong></p>
+<ul>
+  <li>Kulutuslaskuri (ikä, pituus, paino, sukupuoli, aktiivisuustaso - BMR + aktiivisuuskerroin)</li>
+  <li>Ruokapäiväkirja, johon voi lisätä ja poistaa aterioita</li>
+  <li>Aterialistaus, joka näyttää kunkin aterian kalorimäärän</li>
+  <li>Tietojen säilytys selaimessa (localStorage)</li>
+  <li>Moderni käyttöliittymä Material UI -komponenteilla (valikot, tekstikentät, napit, Drawer-valikko)</li>
+  <li>Reseptisivu, josta löytyy ainesosat ja reseptit</li>
+</ul><br>
+
+<p><strong>Käytetyt teknologiat:</strong><br><br>
+React (TypeScript), Material UI, localStorage
+</p>
+
+<p>
+Sovellus on julkaistu GitHub Pages -palvelussa. Pääset kokeilemaan sitä <a href="https://fjusa016xamk.github.io/foodieplanner/" target="_blank">tästä linkistä</a>.
+</p>
+<p><strong>Opettajan palaute</strong></p>
+<img src="img/SOPalaute.png" alt="Palaute">
   </div>
+  <a href="index.html" class="button3">Takaisin etusivulle</a>
 
 <footer class="footer">
 <p>© 2025 Juulia Vähä</p>
