--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
 <body class="etusivu">
   <nav class="navbar">
+
+    <div class="hamburger" id="hamburger">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
+
+
     <ul class="nav-links">
       <li><a href="index.html" class="active">ETUSIVU</a></li>
       <li><a href="tietoja.html">ESITTELY</a></li>
@@ -17,6 +25,7 @@
       <li><a href="cv.html">CV</a></li>
       <li><a href="yhteys.html">YHTEYS</a></li>
     </ul>
+
   </nav>
 
   <div class="container">
@@ -30,6 +39,7 @@
           <a href="cv.html" class="button2">CV</a>
         </div>
       </div>
+      
       <img src="img/portfoliotransparent.png" alt="omakuva" />
     </div>
   </div>
@@ -65,7 +75,7 @@
     <div class="kuvakortti">
       <a href="portfoliosivu.html">
         <img src="img/portfoliosivukuva.png" alt="Kuva 5">
-        <p>Portfoliosivu</p>
+        <p>Portfoliosivusto</p>
       </a>
     </div>
     <div class="kuvakortti">
@@ -83,5 +93,7 @@
   <p>© 2025 Juulia Vähä</p>
     
 </footer>
+
+<script src="script.js"></script>
 </body>
 </html>
