--- a/portfoliosivu.html
+++ b/portfoliosivu.html
@@ -19,15 +19,15 @@
   </nav>
 
   <div class="container">
-      <h1>Portfoliosivu</h1>
+      <h1>Portfoliosivusto</h1>
       <p><strong>Oma portfolioprojekti</strong></p>
 <p>
-Halusin luoda oman portfoliosivun, joka toimii itsessään näyttönä verkkosivujen rakentamisen hallitsemisena ja missä pääsen näyttämään osaamistani.
-</p>
+Halusin toteuttaa oman portfoliosivuston, joka toimii sekä osaamiseni esittelynä että näyttönä verkkosivujen suunnittelu- ja toteutustaidoistani.
 
+Sivusto on alusta loppuun itse suunniteltu ja toteutettu ilman valmiita teemoja tai pohjia, ja koko koodi on kirjoitettu tyhjälle pohjalle (from scratch).
+</p>
 <p>
-  Suunnittelin verkkosivuston itse alusta alkaen, eikä siinä ole käytetty mitään valmiita pohjia. Koodi on kirjoitettu from scratch.
-  Ensisijaisesti suunnittelin verkkosivuston toimivan suurilla ruuduilla, mutta halusin tehdä sivustosta toki myös responsiivisen, jotta sivustoa voisi käyttää mahdollisimman monipuolisesti, eikä puhelin käyttäjälläkään jää sivustosta huono maku suuhun.
+Suunnittelin sivuston ensisijaisesti toimimaan sujuvasti suurilla näytöillä, mutta kiinnitin erityistä huomiota myös responsiivisuuteen. Tavoitteena oli varmistaa, että käyttökokemus säilyy laadukkaana ja miellyttävänä myös mobiililaitteilla.
 </p>
 
 <p>Mikäli haluat tarkastella tarkemmin sivuston rakennetta, pääset GitHub-repositorioon <a href="https://github.com/juuliavaha/portfolio.git" target="_blank">tästä.</a></p>
