--- a/projektit.html
+++ b/projektit.html
@@ -50,7 +50,7 @@
       <div class="kuvakortti">
         <a href="portfoliosivu.html">
           <img src="img/portfoliosivukuva.png" alt="Kuva 5">
-          <p>Portfoliosivu</p>
+          <p>Portfoliosivusto</p>
         </a>
       </div>
       <div class="kuvakortti">
