--- a/projektit.html
+++ b/projektit.html
@@ -9,6 +9,13 @@
 </head>
 <body class="muut">
   <nav class="navbar">
+
+    <div class="hamburger" id="hamburger">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
+
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
       <li><a href="tietoja.html">ESITTELY</a></li>
@@ -69,5 +76,6 @@
     <p>© 2025 Juulia Vähä</p>
   </footer>
 
+  <script src="script.js"></script>
 </body>
 </html>
