--- a/tietoja.html
+++ b/tietoja.html
@@ -9,6 +9,13 @@
 </head>
 <body class="esittely">
   <nav class="navbar">
+
+    <div class="hamburger" id="hamburger">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
+
     <ul class="nav-links">
       <li><a href="index.html">ETUSIVU</a></li>
       <li><a href="tietoja.html" class="active">ESITTELY</a></li>
@@ -77,5 +84,6 @@ Oman käden jäljen näkeminen, pikkutarkka työ, mutta toisaalta myös itsensä
 <p>© 2025 Juulia Vähä</p>
 </footer>
 
+<script src="script.js"></script>
 </body>
 </html>
