--- a/video.html
+++ b/video.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Esittely</title>
+  <title>Video</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;800&display=swap" rel="stylesheet">
 </head>
@@ -26,35 +26,31 @@
   </nav>
 
   <div class="container">
-      <h1>Sovellusohjelmointi</h1>
-      <p><strong>Henkilökohtainen kaloriseurantasovellus</strong></p>
+      <h1>Video ja ääni</h1>
+      <p><strong>Omavalintainen videoprojekti</strong></p>
 <p>
-  <strong>Foodie Planner</strong> on sovellusohjelmoinnin kurssilla toteutettu soveltava harjoitustyö, jonka tavoitteena oli osoittaa osaamista kurssin keskeisistä aiheista. Projektissa arvioitiin aiheen valintaa, teknistä toteutusta ja sovelluksen julkaisemista.
+  Kurssin päättötyönä tehtiin itsenäisesti suoritettava videoprojekti. Aiheen sai valita vapaasti, kunhan se muodosti uutiskatsauksen tai esittelyn jostakin tietystä aihealueesta. Valitsin aiheekseni "Valokuvaus - Harrastuksesta ammatiksi", jossa kävin haastattelemassa video- ja valokuvaaja Antti Vähää hänen työhuoneellaan.
 </p>
 
 <p>
-  Sovelluksen tarkoituksena on auttaa käyttäjää seuraamaan päivittäistä energiankulutusta ja vertaamaan sitä syötyihin aterioihin. Käyttäjä voi laskea kokonaiskulutuksen ja koota ruokapäiväkirjaa valmiista aterioista.
-</p>
-<img src="img/SO.png" alt="Sovelluksen näkymä">
-<p><strong>Keskeiset ominaisuudet:</strong></p>
-<ul>
-  <li>Kulutuslaskuri (ikä, pituus, paino, sukupuoli, aktiivisuustaso - BMR + aktiivisuuskerroin)</li>
-  <li>Ruokapäiväkirja, johon voi lisätä ja poistaa aterioita</li>
-  <li>Aterialistaus, joka näyttää kunkin aterian kalorimäärän</li>
-  <li>Tietojen säilytys selaimessa (localStorage)</li>
-  <li>Moderni käyttöliittymä Material UI -komponenteilla (valikot, tekstikentät, napit, Drawer-valikko)</li>
-  <li>Reseptisivu, josta löytyy ainesosat ja reseptit</li>
-</ul><br>
-
-<p><strong>Käytetyt teknologiat:</strong><br><br>
-React (TypeScript), Material UI, localStorage
-</p>
+  Työ käynnistyi käsikirjoituksen laatimisella ja haastattelukysymyksien miettimisellä, jonka jälkeen suoritettiin kuvaus vapaavalintaisella laitteistolla. Tässä videomateriaali kuvattiin (tällä kameralla), ja selostajan ääniraidat nauhoitettiin ja editoitiin Adobe Auditionilla. 
+  Lopuksi videoon tehtiin vielä värikorjaukset ja leikkaukset Adobe Premierellä ja äänen viimeistely Adobe Auditionilla.
+</p><br><br>
+<img src="img/video1.jpg" alt="Videonäkymä">
+<img src="img/video2.jpg" alt="Videonäkymä">
 
 <p>
-Sovellus on julkaistu GitHub Pages -palvelussa. Pääset kokeilemaan sitä <a href="https://fjusa016xamk.github.io/foodieplanner/" target="_blank">tästä linkistä</a>.
+Video on julkaistu kokonaisuudessaan Youtubessa, pääset katsomaan sen <a href="https://youtu.be/HqkDCJHNL4E" target="_blank">tästä linkistä</a>.
 </p>
+<br>
+
+<p><strong>Käytetyt laitteet ja ohjelmistot:</strong><br><br>
+tähän tähän
+</p>
+<br>
+
 <p><strong>Opettajan palaute</strong></p>
-<img src="img/SOPalaute.png" alt="Palaute">
+<img src="img/VideoPalaute.jpg" alt="Palaute">
   </div>
   <a href="index.html" class="button3">Takaisin etusivulle</a>
 
