--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     <div class="kuvakortti">
       <a href="video.html">
-        <img src="img/esimerkkikuva2.png" alt="Kuva 5">
+        <img src="img/video2.jpg" alt="Kuva 5">
         <p>Video ja ääni</p>
       </a>
     </div>
