--- a/projektit.html
+++ b/projektit.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projektit</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;800&display=swap" rel="stylesheet">
 </head>
 <body class="muut">
   <nav class="navbar">
@@ -62,7 +62,7 @@
       </div>
       <div class="kuvakortti">
         <a href="video.html">
-          <img src="img/esimerkkikuva2.png" alt="Kuva 6">
+          <img src="img/video2.jpg" alt="Kuva 6">
           <p>Video ja ääni</p>
         </a>
       </div>
