--- a/video.html
+++ b/video.html
@@ -40,7 +40,7 @@
 <img src="img/video2.jpg" alt="Videonäkymä">
 
 <p>
-Video on julkaistu kokonaisuudessaan Youtubessa, pääset katsomaan sen <a href="https://youtu.be/HqkDCJHNL4E" target="_blank">tästä linkistä</a>.
+Video on julkaistu kokonaisuudessaan Youtubessa, pääset katsomaan sen <a href="https://youtu.be/HqkDCJHNL4E" target="_blank">tästä</a>.
 </p>
 <br>
 
