--- a/tietoja.html
+++ b/tietoja.html
@@ -66,6 +66,7 @@ Oman käden jäljen näkeminen, pikkutarkka työ, mutta toisaalta myös itsensä
       <p>Unreal Engine</p>
     </div>
     <div>
+      <p>Framer</p>
       <p>Adobe Photoshop</p>
       <p>Adobe Illustrator</p>
       <p>Adobe InDesign</p>
