--- a/video.html
+++ b/video.html
@@ -28,13 +28,14 @@
   <div class="container">
       <h1>Video ja ääni</h1>
       <p><strong>Omavalintainen videoprojekti</strong></p>
+       <br>
 <p>
   Kurssin päättötyönä tehtiin itsenäisesti suoritettava videoprojekti. Aiheen sai valita vapaasti, kunhan se muodosti uutiskatsauksen tai esittelyn jostakin tietystä aihealueesta. Valitsin aiheekseni "Valokuvaus - Harrastuksesta ammatiksi", jossa kävin haastattelemassa video- ja valokuvaaja Antti Vähää hänen työhuoneellaan.
 </p>
 
 <p>
-  Työ käynnistyi käsikirjoituksen laatimisella ja haastattelukysymyksien miettimisellä, jonka jälkeen suoritettiin kuvaus vapaavalintaisella laitteistolla. Tässä videomateriaali kuvattiin (tällä kameralla), ja selostajan ääniraidat nauhoitettiin ja editoitiin Adobe Auditionilla. 
-  Lopuksi videoon tehtiin vielä värikorjaukset ja leikkaukset Adobe Premierellä ja äänen viimeistely Adobe Auditionilla.
+  Työ käynnistyi käsikirjoituksen laatimisella ja haastattelukysymysten laatimisella, jonka jälkeen suoritettiin kuvaus vapaavalintaisella laitteistolla. Tässä videomateriaali kuvattiin <strong>Canon R5</strong> videokameralla, ja selostajan ääniraidat nauhoitettiin <strong>Roden Podmicilla</strong>. Käytössä haastatteluvastauksia varten oli <strong>Roden Lavalier</strong> nappimikit.
+  Lopuksi videoon tehtiin vielä leikkaus ja värimäärittely Adobe Premierellä ja ääni viimeisteltiin Adobe Auditionilla.
 </p><br><br>
 <img src="img/video1.jpg" alt="Videonäkymä">
 <img src="img/video2.jpg" alt="Videonäkymä">
@@ -44,9 +45,15 @@ Video on julkaistu kokonaisuudessaan Youtubessa, pääset katsomaan sen <a href=
 </p>
 <br>
 
-<p><strong>Käytetyt laitteet ja ohjelmistot:</strong><br><br>
-tähän tähän
-</p>
+<p><strong>Käytetyt laitteet ja ohjelmistot:</strong></p>
+<ul class="listat">
+  <li>Canon R5</li>
+  <li>Rode Podmic</li>
+  <li>Rode Lavalier</li>
+  <li>Adobe Premiere</li>
+  <li>Adobe Audition</li>
+</ul>
+<br>
 <br>
 
 <p><strong>Opettajan palaute</strong></p>
