--- a/pelit.html
+++ b/pelit.html
@@ -29,11 +29,12 @@
   <h1>Pelit ja pelillisyys</h1>
   
   <p><strong>Oma interaktiivinen pelimaailma Unreal Enginessä</strong></p>
-  
+   <br>
   <p>Kurssin lopputyössä suunnittelin ja toteutin kokonaisen pelimaailman Unreal Engine -ympäristöön. Tavoitteena oli yhdistää aiemmissa harjoituksissa opitut taidot ja luoda visuaalisesti toimiva, interaktiivinen ympäristö, jossa pelaaja voi liikkua ja nauttia maisemasta.</p>
+  <br>
   <img src="img/PP.png" alt="Pelinäkymä1">
   <p><strong>Tehtävän keskeiset osa-alueet:</strong></p>
-  <ul>
+  <ul class="listat">
     <li><strong>Oma maasto:</strong> Rakensin maaston täysin itse muokaten Terresculpt-työkalulla ja välttäen kurssin valmiita korkeuskarttoja.</li>
     <li><strong>Monipuolinen foliage:</strong> Käytin useita eri kasvi- ja luonnonelementtejä, kuten puita, ruohikkoa ja kiviröykkiöitä, maiseman rikastamiseksi ja elävöittämiseksi.</li>
     <li><strong>Materiaalit ja teksturointi:</strong> Hyödynsin useampaa erilaista materiaalia, jotka sulautuvat toisiinsa luoden yhtenäisen ja realistisen ilmeen.</li>
@@ -45,6 +46,7 @@
   
   <p><strong>Tekniset haasteet ja opit:</strong><br><br>
   Loin pelimaailmaan runsaasti puita ja muuta kasvillisuutta, mikä toi visuaalista runsautta ja luonnollisuutta. Huomasin kuitenkin, että liiallinen foliage kuormittaa grafiikkaa ja heikentää pelin suorituskykyä, joten jouduin tekemään kompromisseja optimaalisen suorituskyvyn ja visuaalisen laadun välillä. Tämä opetti minulle resurssien hallinnan merkityksen ja tasapainon löytämisen grafiikan ja toimivuuden välillä.</p>
+   <br>
   <img src="img/PP2.png" alt="Pelinäkymä2">
   <p><strong>Opettajan palaute</strong></p>
   <img src="img/PPPalaute.png" alt="Palaute">
