--- a/sovellusohjelmointi.html
+++ b/sovellusohjelmointi.html
@@ -29,6 +29,7 @@
       <h1>Sovellusohjelmointi</h1>
       <p><strong>Henkilökohtainen kaloriseurantasovellus</strong></p>
 <p>
+  <br>
   <strong>Foodie Planner</strong> on sovellusohjelmoinnin kurssilla toteutettu soveltava harjoitustyö, jonka tavoitteena oli osoittaa osaamista kurssin keskeisistä aiheista. Projektissa arvioitiin aiheen valintaa, teknistä toteutusta ja sovelluksen julkaisemista.
 </p>
 
@@ -37,7 +38,7 @@
 </p>
 <img src="img/SO.png" alt="Sovelluksen näkymä">
 <p><strong>Keskeiset ominaisuudet:</strong></p>
-<ul>
+<ul class="listat">
   <li>Kulutuslaskuri (ikä, pituus, paino, sukupuoli, aktiivisuustaso - BMR + aktiivisuuskerroin)</li>
   <li>Ruokapäiväkirja, johon voi lisätä ja poistaa aterioita</li>
   <li>Aterialistaus, joka näyttää kunkin aterian kalorimäärän</li>
@@ -51,9 +52,9 @@ React (TypeScript), Material UI, localStorage
 </p>
 <br>
 
-<p>
-Sovellus on julkaistu GitHub Pages -palvelussa. Pääset kokeilemaan sitä <a href="https://fjusa016xamk.github.io/foodieplanner/" target="_blank">tästä linkistä</a>.
-</p><br>
+<p><strong>
+Sovellus on julkaistu GitHub Pages -palvelussa. Pääset kokeilemaan sitä <a href="https://fjusa016xamk.github.io/foodieplanner/" target="_blank">tästä</a>.
+</p></strong><br>
 <p><strong>Opettajan palaute</strong></p>
 <img src="img/SOPalaute.png" alt="Palaute">
   </div>
