--- a/tietoja.html
+++ b/tietoja.html
@@ -28,25 +28,28 @@
   <div class="esittely-container">
 
       <div class="content">
-        <h1>Esittely</h1><br>
+        <h1>Esittely</h1><br><br>
 <p><strong>Hei!</strong> Olen Juulia Vähä ja opiskelen viimeistä vuotta tietojenkäsittelyä Kaakkois-Suomen ammattikorkeakoulussa. 
-Etsin uusia työmahdollisuuksia Pirkanmaan alueelta ja olen avoin monenlaisille tehtäville. Suurimmat intohimoni liittyvät visuaaliseen työhön ja ongelmanratkaisutehtäviin. 
-Ohjelmointi sekä web- ja UI-suunnittelu kiinnostavat erityisesti, ja lisäksi minua kiehtovat myös peliala ja graafinen suunnittelu. Olen kiinnostunut uudenlaisista teknologioista ja haluan kehittää osaamistani huipputasolle.</p>
+Tällä hetkellä toimin lähiesimiehenä kaupan alalla, mutta nyt etsin uusia uramahdollisuuksia tietojenkäsittelyn alalta Pirkanmaan alueelta. Suurimmat intohimoni liittyvät projekteihin, joissa pääsen näkemään kätteni jäljen, ja joissa tarvitaan ongelmanratkaisukykyä ja mahdollisesti myös visuaalista silmää. 
+Olen kiinnostunut erityisesti ohjelmointitehtävistä, web- ja UI-suunnittelusta, pelialasta sekä graafisesta suunnittelusta. Minua kiehtovat uudenlaiset teknologiat ja haluan kehittää osaamistani huipputasolle.</p>
 
-<p><strong>Mitä voit odottaa minulta?</strong><br><br>
-Rakastan ihmisiä ja vaalin hyviä ihmissuhteita niin yksityis- kuin työelämässä. 
-Hyvä työilmapiiri ja yhteistyö työkavereiden sekä asiakkaiden kanssa antavat minulle paljon. 
-Työskentelen tarkasti, tunnollisesti ja kunnianhimoisesti.</p>
+<br>
 
-<p>Nautin monipuolisista projekteista, jotka tarjoavat mahdollisuuden kehittyä. 
-Elämässäni täytyy aina olla yksi tai useampi projekti työn alla. 
-Haluaisin suunnata tämän energian työtehtäviin, jotka inspiroivat minua.
-Kun eteeni tulee jokin mielenkiintoinen projekti, minun on vaikea lopettaa työstämästä sitä.</p>
+<p><strong>Mitä voit odottaa minulta?</strong><br>
+</p>
+
+<p>Haluan oppia uutta jatkuvasti, ja juuri siksi tietojenkäsittelyn ala on erityisen kiehtova, sillä uuden oppiminen ei varmasti lopu kesken. Nautin monipuolisista projekteista, jotka tarjoavat mahdollisuuden kehittyä. 
+Elämässäni onkin usein vähintään yksi projekti työn alla, sillä en tykkää jämähtää paikoilleni. 
+Kun eteeni tulee jokin mielenkiintoinen projekti, minun on vaikea lopettaa työstämästä sitä ja hiomasta sitä parhaaseen mahdolliseen lopputulokseen.
+Työskentelen siis tarkasti, tunnollisesti ja kunnianhimoisesti. </p>
+
+<p>Rakastan ihmisiä ja vaalin hyviä ihmissuhteita niin yksityis- kuin työelämässä. 
+Hyvä työilmapiiri ja yhteistyö työkavereiden sekä asiakkaiden kanssa antavat minulle paljon, ja ovat keskeinen osa työtyytyväisyyttä. Uskon, että avoin vuorovaikutus, keskinäinen luottamus ja tiimihengen vaaliminen näkyvät lopulta myös työn tuloksissa ja asiakaskokemuksessa.</p>
 
 <p>Kun en istu tietokoneen ääressä, olen todennäköisesti virkkaamassa tai juoksulenkillä. 
 Oman käden jäljen näkeminen, pikkutarkka työ, mutta toisaalta myös itsensä haastaminen ja kehittäminen antavat minulle energiaa arjessa.</p>
 
-<p>Jos uskot, että sopisin teidän tiimiin niin persoonana kuin työntekijänä, ota yhteyttä, niin keskustellaan lisää.</p>
+<p>Jos uskot, että sopisin teidän tiimiin niin persoonana kuin työntekijänä, ota yhteyttä, niin keskustellaan lisää. &#128522;</p>
 <a href="yhteys.html" class="button1">Yhteystiedot</a>
        </div>
 
