--- a/video.html
+++ b/video.html
@@ -57,8 +57,9 @@ Video on julkaistu kokonaisuudessaan Youtubessa, pääset katsomaan sen <a href=
 <br>
 
 <p><strong>Opettajan palaute</strong></p>
-<img src="img/VideoPalaute.jpg" alt="Palaute">
+<img src="img/VideoPalaute.jpg" alt="Palaute" class="videopalaute">
   </div>
+
   <a href="index.html" class="button3">Takaisin etusivulle</a>
 
 <footer class="footer">
